# xsoc-tss-core

./: Cargo.toml  README.md
.disclosure-lint/: forbidden.txt
.github/workflows/: ci.yml  disclosure-lint.yml
docs/: XSOC-QSIG-TQ_Design_and_Implementation_Plan.md  XSOC-QSIG-TQ_Security_Argument.md
scripts/: disclosure-lint.sh  no-stub-check.ps1
src/: lib.rs  module_sis.rs
